all ASP.NET legacy project converted to java